文章字体大小

--- a/页面定制CSS代码.css
+++ b/页面定制CSS代码.css
@@ -330,3 +330,11 @@ div.commentform textarea {
 .feedbackCon {
     border-bottom: 1px solid #f0f0f0;
 }
+
+#cnblogs_post_body p {
+    font-size: 16px;
+}
+
+#cnblogs_post_body ul li {
+    font-size: 15px;
+}
